added footer structure

--- a/index.html
+++ b/index.html
@@ -60,8 +60,13 @@
         </div>
     </main>
 
-    
+
     <!-- Footer -->
-    <footer></footer>
+    <footer>
+        <div class="footer-information container">
+            <div class="footer-company">ciao</div>
+            <div class="footer-social">ciao</div>
+        </div>
+    </footer>
 </body>
 </html>
