added header contents

--- a/index.html
+++ b/index.html
@@ -12,9 +12,23 @@
     <!-- Header -->
     <header>
         <nav class="navbar container">
-            <div class="navbar-gender">Genere</div>
-            <div class="navbar-logo">Titolo</div>
-            <div class="navbar-actions">Icona</div>
+            <div class="navbar-gender">
+                <ul>
+                    <li>Donna</li>
+                    <li>Uomo</li>
+                    <li>Bambino</li>
+                </ul>
+            </div>
+            <div class="navbar-logo">
+                <img src="img/boolean-logo.png" alt="logo boolean">
+            </div>
+            <div class="navbar-actions">
+                <ul>
+                    <li><i class="fa-regular fa-user"></i></li>
+                    <li><i class="fa-regular fa-heart"></i></li>
+                    <li><i class="fa-solid fa-bag-shopping"></i></li>
+                </ul>
+            </div>
         </nav>
     </header>
     
