added main details

--- a/index.html
+++ b/index.html
@@ -35,35 +35,43 @@
     <!-- Main -->
     <main>
         <div class="container">
-            <div class="row">
+            <div class="row container">
                 <div class="column">
                     <div class="card">
                         <img src="img/1.webp" alt="primo prodotto">
                         <span class="discount bg-red">-50%</span>
                         <span class="sustainability bg-green">Sostenibilità</span>
+                        <div class="img-description">
+                            <div class="brand">Levi's</div>
+                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
+                            <span class="discount-price">14,99 €</span> 
+                            <span class="real-price">29,99 €</span>
+                        </div>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="img/2.webp" alt="secondo prodotto">
                         <span class="discount bg-red">-30%</span>
+                        <div class="img-description">
+                            <div class="brand">Levi's</div>
+                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
+                            <span class="discount-price">14,99 €</span> 
+                            <span class="real-price">29,99 €</span>
+                        </div>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="img/3.webp" alt="terzo prodotto">
                         <span class="discount bg-red">-30%</span>
+                        <div class="img-description">
+                            <div class="brand">Levi's</div>
+                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
+                            <span class="discount-price">14,99 €</span> 
+                            <span class="real-price">29,99 €</span>
+                        </div>
                     </div>
-                </div>
-            </div>
-            <div class="under-row">
-                <div class="under-column">
-                </div>
-                <div class="under-column">
-
-                </div>
-                <div class="under-column">
-
                 </div>
             </div>
 
@@ -73,24 +81,37 @@
                         <img src="img/4.webp" alt="quarto prodotto">
                         <span class="discount bg-red">-50%</span>
                         <span class="sustainability bg-green">Sostenibilità</span>
+                        <div class="img-description">
+                            <div class="brand">Levi's</div>
+                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
+                            <span class="discount-price">14,99 €</span> 
+                            <span class="real-price">29,99 €</span>
+                        </div>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="img/5.webp" alt="quinto prodotto">
+                        <div class="img-description" id="card-empty">
+                            <div class="brand">Levi's</div>
+                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
+                            <span class="discount-price">14,99 €</span> 
+                            <span class="real-price">29,99 €</span>
+                        </div>
                     </div>
                 </div>
                 <div class="column">
                     <div class="card">
                         <img src="img/6.webp" alt="sesto prodotto">
                         <span class="sustainability bg-green">Sostenibilità</span>
+                        <div class="img-description">
+                            <div class="brand">Levi's</div>
+                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
+                            <span class="discount-price">14,99 €</span> 
+                            <span class="real-price">29,99 €</span>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="under-row">
-                <div class="under-column"></div>
-                <div class="under-column"></div>
-                <div class="under-column"></div>
             </div>
         </div>
     </main>
