--- a/index.html
+++ b/index.html
@@ -120,8 +120,25 @@
     <!-- Footer -->
     <footer>
         <div class="footer-information container">
-            <div class="footer-company">ciao</div>
-            <div class="footer-social">ciao</div>
+            <div class="footer-company">
+                <h3>Booleando s.r.l</h3>
+                <ul>
+                    <li>Informazioni legali</li>
+                    <li>Informativa sulla privacy</li>
+                    <li>Diritto di recesso</li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <h4>Trovaci anche su</h4>
+                <div class="social-icons">
+                    <i class="fa-brands fa-square-twitter"></i>
+                    <i class="fa-brands fa-square-facebook"></i>
+                    <i class="fa-brands fa-square-instagram"></i>
+                    <i class="fa-brands fa-square-pinterest"></i>
+                    <i class="fa-brands fa-square-youtube"></i>
+                </div>
+                
+            </div>
         </div>
     </footer>
 </body>
