added hover effects

--- a/index.html
+++ b/index.html
@@ -35,9 +35,9 @@
     <!-- Main -->
     <main>
         <div class="container">
-            <div class="row container">
+            <div class="row">
                 <div class="column">
-                    <div class="card">
+                    <div class="card" id="first-product">
                         <img src="img/1.webp" alt="primo prodotto">
                         <span class="discount bg-red">-50%</span>
                         <span class="sustainability bg-green">Sostenibilità</span>
@@ -47,69 +47,73 @@
                             <span class="discount-price">14,99 €</span> 
                             <span class="real-price">29,99 €</span>
                         </div>
+                        <div class="heart">&hearts;</div>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="card">
+                    <div class="card"id="second-product">
                         <img src="img/2.webp" alt="secondo prodotto">
                         <span class="discount bg-red">-30%</span>
                         <div class="img-description">
-                            <div class="brand">Levi's</div>
-                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
-                            <span class="discount-price">14,99 €</span> 
+                            <div class="brand">Guess</div>
+                            <div class="name-product">ROSES TEE</div>
+                            <span class="discount-price">20,99 €</span> 
                             <span class="real-price">29,99 €</span>
                         </div>
+                        <div class="heart">&hearts;</div>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="card">
+                    <div class="card" id="third-product">
                         <img src="img/3.webp" alt="terzo prodotto">
                         <span class="discount bg-red">-30%</span>
                         <div class="img-description">
-                            <div class="brand">Levi's</div>
-                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
-                            <span class="discount-price">14,99 €</span> 
-                            <span class="real-price">29,99 €</span>
+                            <div class="brand">Come Zucchero Filato</div>
+                            <div class="name-product">VOGLIA DI COLORI PASTELLO</div>
+                            <span class="discount-price">129,99 €</span> 
+                            <span class="real-price">184,99 €</span>
                         </div>
+                        <div class="heart">&hearts;</div>
                     </div>
                 </div>
             </div>
 
             <div class="row">
                 <div class="column">
-                    <div class="card">
+                    <div class="card" id="fourth-product">
                         <img src="img/4.webp" alt="quarto prodotto">
                         <span class="discount bg-red">-50%</span>
                         <span class="sustainability bg-green">Sostenibilità</span>
                         <div class="img-description">
                             <div class="brand">Levi's</div>
-                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
+                            <div class="name-product">TEE UNISEX</div>
                             <span class="discount-price">14,99 €</span> 
                             <span class="real-price">29,99 €</span>
                         </div>
+                        <div class="heart">&hearts;</div>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="card">
+                    <div class="card" id="fifth-product">
                         <img src="img/5.webp" alt="quinto prodotto">
                         <div class="img-description" id="card-empty">
-                            <div class="brand">Levi's</div>
-                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
-                            <span class="discount-price">14,99 €</span> 
-                            <span class="real-price">29,99 €</span>
+                            <div class="brand">Maya Deluxe</div>
+                            <div class="name-product">STRIPE BODICE</div>
+                            <span class="discount-price">99,99 €</span> 
                         </div>
+                        <div class="heart">&hearts;</div>
                     </div>
                 </div>
                 <div class="column">
-                    <div class="card">
+                    <div class="card" id="sixth-product">
                         <img src="img/6.webp" alt="sesto prodotto">
                         <span class="sustainability bg-green">Sostenibilità</span>
                         <div class="img-description">
-                            <div class="brand">Levi's</div>
-                            <div class="name-product">RELAXED FIT TEE UNISEX</div>
-                            <span class="discount-price">14,99 €</span> 
-                            <span class="real-price">29,99 €</span>
+                            <div class="brand">Esprit</div>
+                            <div class="name-product">MAGLIONE-BLACK</div>
+                            <span class="discount-price">29,99 €</span> 
                         </div>
+                        <div class="heart">&hearts;</div>
                     </div>
                 </div>
             </div>
@@ -137,7 +141,6 @@
                     <i class="fa-brands fa-square-pinterest"></i>
                     <i class="fa-brands fa-square-youtube"></i>
                 </div>
-                
             </div>
         </div>
     </footer>
