small changes to main

--- a/index.html
+++ b/index.html
@@ -37,8 +37,9 @@
         <div class="container">
             <div class="row">
                 <div class="column">
-                    <div class="card" id="first-product">
-                        <img src="img/1.webp" alt="primo prodotto">
+                    <div class="card">
+                        <img src="img/1.webp" alt="primo prodotto" class="img-main">
+                        <img src="img/1b.webp" alt="primo prodotto" class="img-hover">
                         <span class="discount bg-red">-50%</span>
                         <span class="sustainability bg-green">Sostenibilità</span>
                         <div class="img-description">
@@ -51,8 +52,9 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="card"id="second-product">
-                        <img src="img/2.webp" alt="secondo prodotto">
+                    <div class="card">
+                        <img src="img/2.webp" alt="secondo prodotto" class="img-main">
+                        <img src="img/2b.webp" alt="secondo prodotto" class="img-hover">
                         <span class="discount bg-red">-30%</span>
                         <div class="img-description">
                             <div class="brand">Guess</div>
@@ -64,8 +66,9 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="card" id="third-product">
-                        <img src="img/3.webp" alt="terzo prodotto">
+                    <div class="card">
+                        <img src="img/3.webp" alt="terzo prodotto" class="img-main">
+                        <img src="img/3b.webp" alt="terzo prodotto" class="img-hover">
                         <span class="discount bg-red">-30%</span>
                         <div class="img-description">
                             <div class="brand">Come Zucchero Filato</div>
@@ -80,8 +83,9 @@
 
             <div class="row">
                 <div class="column">
-                    <div class="card" id="fourth-product">
-                        <img src="img/4.webp" alt="quarto prodotto">
+                    <div class="card">
+                        <img src="img/4.webp" alt="quarto prodotto" class="img-main">
+                        <img src="img/4b.webp" alt="quarto prodotto" class="img-hover">
                         <span class="discount bg-red">-50%</span>
                         <span class="sustainability bg-green">Sostenibilità</span>
                         <div class="img-description">
@@ -94,8 +98,9 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="card" id="fifth-product">
-                        <img src="img/5.webp" alt="quinto prodotto">
+                    <div class="card">
+                        <img src="img/5.webp" alt="quinto prodotto" class="img-main">
+                        <img src="img/5b.webp" alt="quinto prodotto" class="img-hover">
                         <div class="img-description" id="card-empty">
                             <div class="brand">Maya Deluxe</div>
                             <div class="name-product">STRIPE BODICE</div>
@@ -105,8 +110,9 @@
                     </div>
                 </div>
                 <div class="column">
-                    <div class="card" id="sixth-product">
-                        <img src="img/6.webp" alt="sesto prodotto">
+                    <div class="card">
+                        <img src="img/6.webp" alt="sesto prodotto" class="img-main">
+                        <img src="img/6b.webp" alt="sesto prodotto" class="img-hover">
                         <span class="sustainability bg-green">Sostenibilità</span>
                         <div class="img-description">
                             <div class="brand">Esprit</div>
